testfx/errors/error_tests/edge_13_try_catch.fx
// 测试: 使用 try-catch 而非 T>
try {
    x := 10 / 0
} catch (e) {
    println(e)
}
